libm2s_cuda_src = [
  'api.c',
  'api.h',
  'api-rt.c',
  'debug.c',
  'debug.h',
  'elf-format.c',
  'elf-format.h',
  'list.c',
  'list.h',
  'mhandle.c',
  'mhandle.h',
  'context.c',
  'context.h',
  'device.c',
  'device.h',
  'event.c',
  'event.h',
  'function.c',
  'function.h',
  'function-arg.c',
  'function-arg.h',
  'memory.c',
  'memory.h',
  'misc.c',
  'misc.h',
  'module.c',
  'module.h',
  'stream.c',
  'stream.h',
]

libm2s_cuda_lib = static_library('m2s-cuda',
  sources: libm2s_cuda_src,
  dependencies: [have_m32, threads])
