if gtk3.found()
  libvisual_src = [
    'common/cycle-bar.c',
    'common/cycle-bar.h',
    'common/led.c',
    'common/led.h',
    'common/list.c',
    'common/list.h',
    'common/popup.c',
    'common/popup.h',
    'common/state.c',
    'common/state.h',
    'common/trace.c',
    'common/trace.h',
    'common/visual.c',
    'common/visual.h',
    'evergreen/compute-unit.c',
    'evergreen/compute-unit.h',
    'evergreen/gpu.c',
    'evergreen/gpu.h',
    'evergreen/inst.c',
    'evergreen/inst.h',
    'evergreen/panel.c',
    'evergreen/panel.h',
    'evergreen/time-dia.c',
    'evergreen/time-dia.h',
    'evergreen/work-group.c',
    'evergreen/work-group.h',
    'memory/mem-system.c',
    'memory/mem-system.h',
    'memory/mod-access.c',
    'memory/mod-access.h',
    'memory/mod-widget.c',
    'memory/mod-widget.h',
    'memory/mod.c',
    'memory/mod.h',
    'memory/panel.c',
    'memory/panel.h',
    'network/buffer.c',
    'network/buffer.h',
    'network/link.c',
    'network/link.h',
    'network/net-graph.c',
    'network/net-graph.h',
    'network/net-message.c',
    'network/net-message.h',
    'network/net-packet.c',
    'network/net-packet.h',
    'network/net-system.c',
    'network/net-system.h',
    'network/net-widget.c',
    'network/net-widget.h',
    'network/net.c',
    'network/net.h',
    'network/node-widget.c',
    'network/node-widget.h',
    'network/node.c',
    'network/node.h',
    'network/panel.c',
    'network/panel.h',
    'southern-islands/compute-unit.c',
    'southern-islands/compute-unit.h',
    'southern-islands/gpu.c',
    'southern-islands/gpu.h',
    'southern-islands/inst.c',
    'southern-islands/inst.h',
    'southern-islands/panel.c',
    'southern-islands/panel.h',
    'southern-islands/time-dia.c',
    'southern-islands/time-dia.h',
    'southern-islands/work-group.c',
    'southern-islands/work-group.h',
    'x86/context.c',
    'x86/context.h',
    'x86/core.c',
    'x86/core.h',
    'x86/cpu.c',
    'x86/cpu.h',
    'x86/inst.c',
    'x86/inst.h',
    'x86/panel.c',
    'x86/panel.h',
    'x86/time-dia.c',
    'x86/time-dia.h',
  ]
else
  libvisual_src = [
    'common/visual-missing.c',
    'common/visual.h',
  ]
endif

libvisual_lib = static_library('visual',
  sources: libvisual_src,
  c_args: ['-Wno-deprecated-declarations'],
  dependencies: gtk3,
  include_directories: m2s_inc)
libvisual = declare_dependency(link_with: libvisual_lib,
  include_directories: m2s_inc)
