libarch_hsa_src = [
  'disassembler/AsmService.cc',
  'disassembler/AsmService.h',
  'disassembler/Brig.h',
  'disassembler/BrigCodeEntry.h',
  'disassembler/BrigCodeEntryDump.cc',
  'disassembler/BrigCodeEntryGetter.cc',
  'disassembler/BrigDataEntry.cc',
  'disassembler/BrigDataEntry.h',
  'disassembler/BrigEntry.cc',
  'disassembler/BrigEntry.h',
  'disassembler/BrigFile.cc',
  'disassembler/BrigFile.h',
  'disassembler/BrigImmed.cc',
  'disassembler/BrigImmed.h',
  'disassembler/BrigOperandEntry.cc',
  'disassembler/BrigOperandEntry.h',
  'disassembler/BrigSection.cc',
  'disassembler/BrigSection.h',
  'disassembler/Disassembler.cc',
  'disassembler/Disassembler.h',
  'disassembler/Instruction.inc.h',
  'driver/Driver.cc',
  'driver/Driver.inc.h',
  'driver/Driver.h',
  'driver/DriverCall.cc',
  'driver/DriverCallHandler.h',
  'driver/HsaExecutable.cc',
  'driver/HsaExecutable.h',
  'driver/HsaExecutableSymbol.cc',
  'driver/HsaExecutableSymbol.h',
  'driver/HsaProgram.cc',
  'driver/HsaProgram.h',
  'driver/Signal.cc',
  'driver/Signal.h',
  'driver/SignalDestroyHandler.cc',
  'driver/SignalDestroyHandler.h',
  'driver/SignalManager.cc',
  'driver/SignalManager.h',
  'emulator/AQLPacket.cc',
  'emulator/AQLPacket.h',
  'emulator/AQLQueue.cc',
  'emulator/AQLQueue.h',
  'emulator/AddInstructionWorker.cc',
  'emulator/AddInstructionWorker.h',
  'emulator/AndInstructionWorker.cc',
  'emulator/AndInstructionWorker.h',
  'emulator/AtomicNoRetInstructionWorker.cc',
  'emulator/AtomicNoRetInstructionWorker.h',
  'emulator/BarrierInstructionWorker.cc',
  'emulator/BarrierInstructionWorker.h',
  'emulator/BrInstructionWorker.cc',
  'emulator/BrInstructionWorker.h',
  'emulator/CbrInstructionWorker.cc',
  'emulator/CbrInstructionWorker.h',
  'emulator/CmpInstructionWorker.cc',
  'emulator/CmpInstructionWorker.h',
  'emulator/Component.cc',
  'emulator/Component.h',
  'emulator/CurrentWorkGroupSizeInstructionWorker.cc',
  'emulator/CurrentWorkGroupSizeInstructionWorker.h',
  'emulator/CvtInstructionWorker.cc',
  'emulator/CvtInstructionWorker.h',
  'emulator/Emulator.cc',
  'emulator/Emulator.h',
  'emulator/Function.cc',
  'emulator/Function.h',
  'emulator/Grid.cc',
  'emulator/Grid.h',
  'emulator/GridSizeInstructionWorker.cc',
  'emulator/GridSizeInstructionWorker.h',
  'emulator/HsaInstructionWorker.cc',
  'emulator/HsaInstructionWorker.h',
  'emulator/LdInstructionWorker.cc',
  'emulator/LdInstructionWorker.h',
  'emulator/LdaInstructionWorker.cc',
  'emulator/LdaInstructionWorker.h',
  'emulator/MadInstructionWorker.cc',
  'emulator/MadInstructionWorker.h',
  'emulator/MemFenceInstructionWorker.cc',
  'emulator/MemFenceInstructionWorker.h',
  'emulator/MovInstructionWorker.cc',
  'emulator/MovInstructionWorker.h',
  'emulator/MulInstructionWorker.cc',
  'emulator/MulInstructionWorker.h',
  'emulator/OperandValueRetriever.cc',
  'emulator/OperandValueRetriever.h',
  'emulator/OperandValueWriter.cc',
  'emulator/OperandValueWriter.h',
  'emulator/OrInstructionWorker.cc',
  'emulator/OrInstructionWorker.h',
  'emulator/RetInstructionWorker.cc',
  'emulator/RetInstructionWorker.h',
  'emulator/SegmentManager.cc',
  'emulator/SegmentManager.h',
  'emulator/ShlInstructionWorker.cc',
  'emulator/ShlInstructionWorker.h',
  'emulator/ShrInstructionWorker.cc',
  'emulator/ShrInstructionWorker.h',
  'emulator/StInstructionWorker.cc',
  'emulator/StInstructionWorker.h',
  'emulator/StackFrame.cc',
  'emulator/StackFrame.h',
  'emulator/SubInstructionWorker.cc',
  'emulator/SubInstructionWorker.h',
  'emulator/Variable.cc',
  'emulator/Variable.h',
  'emulator/Wavefront.cc',
  'emulator/Wavefront.h',
  'emulator/WorkGroup.cc',
  'emulator/WorkGroup.h',
  'emulator/WorkGroupIdInstructionWorker.cc',
  'emulator/WorkGroupIdInstructionWorker.h',
  'emulator/WorkItem.cc',
  'emulator/WorkItem.h',
  'emulator/WorkItemAbsIdInstructionWorker.cc',
  'emulator/WorkItemAbsIdInstructionWorker.h',
  'emulator/WorkItemIdInstructionWorker.cc',
  'emulator/WorkItemIdInstructionWorker.h',
  'emulator/WorkItemIsa.cc',
]

libarch_hsa_lib = static_library('arch-hsa',
  sources: libarch_hsa_src,
  include_directories: m2s_inc
)
libarch_hsa = declare_dependency(
  link_with: libarch_hsa_lib,
  include_directories: m2s_inc)
