libarch_kepler_src = [
  'disassembler/Instruction.h',
  'disassembler/Disassembler.h',
  'disassembler/Disassembler.cc',
  'disassembler/Instruction.cc',
  'disassembler/Instruction.inc.h',
  'emulator/Emulator.cc',
  'emulator/ReturnAddressStack.cc',
  'emulator/ThreadIsa.cc',
  'emulator/Thread.cc',
  'emulator/Emulator.h',
  'emulator/ThreadBlock.h',
  'emulator/SyncStack.h',
  'emulator/Grid.cc',
  'emulator/SyncStack.cc',
  'emulator/Register.h',
  'emulator/Thread.h',
  'emulator/ReturnAddressStack.h',
  'emulator/Warp.cc',
  'emulator/Grid.h',
  'emulator/Warp.h',
  'emulator/ThreadBlock.cc',
  'driver/Driver.h',
  'driver/Function.h',
  'driver/Function.cc',
  'driver/DriverCall.cc',
  'driver/Argument.cc',
  'driver/Argument.h',
  'driver/Module.h',
  'driver/Driver.cc',
  'driver/Module.cc',
  'driver/Driver.inc.h',
]

libarch_kepler_lib = static_library('arch-kepler',
  sources: libarch_kepler_src,
  include_directories: m2s_inc)
libarch_kepler = declare_dependency(
  link_with: libarch_kepler_lib,
  include_directories: m2s_inc)
