libarch_southernislands_src = [
  'disassembler/Argument.cc',
  'disassembler/Argument.h',
  'disassembler/Binary.cc',
  'disassembler/Binary.h',
  'disassembler/Disassembler.cc',
  'disassembler/Disassembler.h',
  'disassembler/Instruction.cc',
  'disassembler/Instruction.inc.h',
  'disassembler/Instruction.h',
  'driver/Driver.h',
  'driver/Driver.cc',
  'driver/Driver.inc.h',
  'driver/DriverCall.cc',
  'driver/Kernel.h',
  'driver/Kernel.cc',
  'driver/Program.h',
  'driver/Program.cc',
  'emulator/Emulator.cc',
  'emulator/Emulator.h',
  'emulator/NDRange.cc',
  'emulator/NDRange.h',
  'emulator/Wavefront.cc',
  'emulator/Wavefront.h',
  'emulator/WorkGroup.cc',
  'emulator/WorkGroup.h',
  'emulator/WorkItem.cc',
  'emulator/WorkItem.h',
  'emulator/WorkItemIsa_SOP2.cc',
  'emulator/WorkItemIsa_SOPK.cc',
  'emulator/WorkItemIsa_SOP1.cc',
  'emulator/WorkItemIsa_SOPC.cc',
  'emulator/WorkItemIsa_SOPP.cc',
  'emulator/WorkItemIsa_SMRD.cc',
  'emulator/WorkItemIsa_VOP2.cc',
  'emulator/WorkItemIsa_VOP1.cc',
  'emulator/WorkItemIsa_VOPC.cc',
  'emulator/WorkItemIsa_VOP3a.cc',
  'emulator/WorkItemIsa_VOP3b.cc',
  'emulator/WorkItemIsa_VINTRP.cc',
  'emulator/WorkItemIsa_DS.cc',
  'emulator/WorkItemIsa_BUF.cc',
  'emulator/WorkItemIsa_MIMG.cc',
  'emulator/WorkItemIsa_EXP.cc',
  'timing/BranchUnit.cc',
  'timing/BranchUnit.h',
  'timing/ComputeUnit.cc',
  'timing/ComputeUnit.h',
  'timing/ExecutionUnit.cc',
  'timing/ExecutionUnit.h',
  'timing/FetchBuffer.cc',
  'timing/FetchBuffer.h',
  'timing/Gpu.cc',
  'timing/Gpu.h',
  'timing/LdsUnit.cc',
  'timing/LdsUnit.h',
  'timing/ScalarUnit.cc',
  'timing/ScalarUnit.h',
  'timing/SimdUnit.cc',
  'timing/SimdUnit.h',
  'timing/Timing.cc',
  'timing/Timing.h',
  'timing/Uop.cc',
  'timing/Uop.h',
  'timing/VectorMemoryUnit.cc',
  'timing/VectorMemoryUnit.h',
  'timing/WavefrontPool.cc',
  'timing/WavefrontPool.h',
]

libarch_southernislands_lib = static_library('arch-southern_islands',
  sources: libarch_southernislands_src,
  include_directories: m2s_inc)
libarch_southernislands = declare_dependency(
  link_with: libarch_southernislands_lib,
  include_directories: m2s_inc)
