libarch_x86_src = [
  'disassembler/Disassembler.cc',
  'disassembler/Disassembler.h',
  'disassembler/Instruction.cc',
  'disassembler/Instruction.inc.h',
  'disassembler/Instruction.h',
  'emulator/Context.cc',
  'emulator/ContextIsa.cc',
  'emulator/ContextIsaCtrl.cc',
  'emulator/ContextIsaFp.cc',
  'emulator/ContextIsaMisc.cc',
  'emulator/ContextIsaRot.cc',
  'emulator/ContextIsaSse.cc',
  'emulator/ContextIsaSse2.cc',
  'emulator/ContextIsaSse3.cc',
  'emulator/ContextIsaSse4.cc',
  'emulator/ContextIsaStd.cc',
  'emulator/ContextIsaStr.cc',
  'emulator/ContextIsaXmm.cc',
  'emulator/ContextLoader.cc',
  'emulator/ContextSignal.cc',
  'emulator/ContextSyscall.cc',
  'emulator/ContextSyscall.inc.h',
  'emulator/ContextUinst.cc',
  'emulator/Context.h',
  'emulator/Emulator.cc',
  'emulator/Emulator.h',
  'emulator/Extended.cc',
  'emulator/Extended.h',
  'emulator/Regs.cc',
  'emulator/Regs.h',
  'emulator/Signal.cc',
  'emulator/Signal.h',
  'emulator/Uinst.cc',
  'emulator/Uinst.h',
  'emulator/XmmValue.cc',
  'emulator/XmmValue.h',
  'timing/Alu.h',
  'timing/Alu.cc',
  'timing/BranchPredictor.h',
  'timing/BranchPredictor.cc',
  'timing/Core.h',
  'timing/Core.cc',
  'timing/Cpu.h',
  'timing/Cpu.cc',
  'timing/CpuScheduler.cc',
  'timing/FunctionalUnit.h',
  'timing/FunctionalUnit.cc',
  'timing/RegisterFile.h',
  'timing/RegisterFile.cc',
  'timing/Thread.h',
  'timing/Thread.cc',
  'timing/ThreadFetch.cc',
  'timing/ThreadDecode.cc',
  'timing/ThreadDispatch.cc',
  'timing/ThreadIssue.cc',
  'timing/ThreadRecover.cc',
  'timing/ThreadCommit.cc',
  'timing/ThreadScheduler.cc',
  'timing/Timing.h',
  'timing/Timing.cc',
  'timing/TraceCache.h',
  'timing/TraceCache.cc',
  'timing/Uop.h',
  'timing/Uop.cc',
]

libarch_x86_lib = static_library('arch-x86',
  sources: libarch_x86_src,
  include_directories: m2s_inc)
libarch_x86 = declare_dependency(link_with: libarch_x86_lib,
  include_directories: m2s_inc)
